# nfc-video-player

./: system_architecture.md
.github/workflows/: deploy-backend.yml
.trae/rules/: android-flutter.md
nfc-project/backend/: README.md  db_init.sql  main.py  nfc_mapping.db  pyproject.toml  requirements.txt  wrangler.jsonc
nfc-project/flutter_app/: README.md  pubspec.yaml
nfc-project/flutter_app/android/app/: build.gradle
nfc-project/flutter_app/android/app/src/main/: AndroidManifest.xml
nfc-project/flutter_app/android/app/src/main/kotlin/com/example/flutter_app/: MainActivity.kt
nfc-project/flutter_app/lib/: main.dart
nfc-project/flutter_app/test/: widget_test.dart
nfc-writer/: NFC_Writer_Tool.spec  README.md  apdu_brute_force.py  app_crypto.py  brute_force_crc.py  brute_force_kdf.py  check_pyscard.py  debug_payload.py  final_passthrough_scan.py  full_probe.py  gui_writer.py  listen_auto.py  listen_magtek.py  magtek_transport.py  magtek_uid_dump.py  ntag424_manager.py  ntag424_writer.py  package_windows.bat  poll_and_beep.py  probe_card_robust.py  probe_card_type.py  probe_magtek.py  read_status.py  recompile.py  requirements.txt  reset_magtek.py  run_writer.bat  scan_params.py  scan_xh_cmds.py  scan_xh_rids.py  secrets.md  setup_ntag424_sun.py  setup_with_lib.py  syssetup.ini  test_12_activate.py  test_12_payload.py  test_19_wrappings.py  test_1a_activation.py  test_1b_19.py  test_apdu_05_slot.py  (+49 more)
