[project]
name = "nfc-video-backend-worker"
version = "0.1.0"
description = "Cloudflare Worker backend for NFC secure video verification"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "webtypy>=0.1.7",
]

[dependency-groups]
dev = [
    "workers-py",
    "workers-runtime-sdk",
]
